prac1/step3/network-policy-allownginx.yaml
# network-policy-allownginx.yaml（curl→nginxの通信を許可）
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx
  namespace: k8s-defense
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
  - Ingress
  ingress:
  # curlからの通信を許可
  - from:
    - podSelector:
        matchLabels:
          app: curl
    ports:
    - protocol: TCP
      port: 80
