prac1/step3/network-policy-denyall.yaml
# deny-all policy
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: k8s-defense
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
